# alchemrs

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  design_doc.md  instructions.md  nes_mbar_method_report.md  nes_mbar_methods_appendix.md  nes_mbar_validation_40ps.md  nico_feedback.md  outline.md  pyproject.toml  release.toml  uwham_reference.R
.github/workflows/: docs.yml  release.yml  rust.yml
alchemrs-py/: Cargo.toml
alchemrs-py/src/: analysis.rs  atm.rs  data.rs  error.rs  estimators.rs  lib.rs  parse.rs  prep.rs
crates/alchemrs-analysis/: Cargo.toml
crates/alchemrs-analysis/src/: lib.rs
crates/alchemrs-analysis/tests/: overlap.rs  overlap_alchemlyb.rs
crates/alchemrs-cli/: Cargo.toml
crates/alchemrs-cli/src/: cli.rs  input.rs  main.rs  output.rs  overlap.rs
crates/alchemrs-cli/src/commands/: bar.rs  exp.rs  mbar.rs  mod.rs  ti.rs
crates/alchemrs-cli/tests/: cli_regression.rs
crates/alchemrs-core/: Cargo.toml
crates/alchemrs-core/src/: lib.rs
crates/alchemrs-estimators/: Cargo.toml
crates/alchemrs-estimators/src/: lib.rs
crates/alchemrs-estimators/tests/: bar_alchemlyb.rs  exp_pymbar.rs  mbar_alchemlyb.rs  ti_alchemlyb.rs
crates/alchemrs-parse/: Cargo.toml
crates/alchemrs-parse/src/: lib.rs
crates/alchemrs-parse/tests/: amber_errors.rs  amber_integration.rs
crates/alchemrs-prep/: Cargo.toml
crates/alchemrs-prep/src/: lib.rs
crates/alchemrs-prep/tests/: decorrelation_alchemlyb.rs  decorrelation_u_nk_alchemlyb.rs  detect_equilibration_alchemlyb.rs
docs/: book.toml
docs/src/: SUMMARY.md  cli.md  compatibility.md  core-data-model.md  data-model.md  estimators.md  getting-started.md  introduction.md  library.md  outputs.md  overlap.md  parsing.md  plotting.md  preprocessing.md  python.md  repository-layout.md  schedule-advisor.md  workspace.md
examples/: amber_mbar.rs  amber_ti.rs  export_uwham_reference.rs  generate_doc_plots.rs  nes_mbar_diagnostics.rs  nes_mbar_validation.rs  openmm_u_kln_mbar.rs  profile_estimators.rs
fixtures/amber/: README.md
fixtures/amber/acetamide_tiny/: bar_0.0_1.0.delta_f_sigma.txt  detect_equilibration_0.1.txt  exp_matrix.txt  exp_sigma.txt  mbar_0.0_1.0.delta_f_sigma.txt  overlap_eigenvalues.txt  overlap_matrix.txt  overlap_scalar.txt  ti_0.0_1.0.delta_f_sigma.txt
fixtures/amber/acetamide_tiny/0.0/: acetamide.prod.out
fixtures/amber/acetamide_tiny/0.05/: acetamide.prod.out
fixtures/amber/acetamide_tiny/0.1/: acetamide.prod.out  dhdl.decorrelated.csv  u_nk.decorrelated.csv
fixtures/amber/acetamide_tiny/0.15/: acetamide.prod.out
fixtures/amber/acetamide_tiny/0.2/: acetamide.prod.out
fixtures/amber/acetamide_tiny/0.3/: acetamide.prod.out
fixtures/amber/acetamide_tiny/0.4/: acetamide.prod.out
fixtures/amber/acetamide_tiny/0.5/: acetamide.prod.out
fixtures/amber/acetamide_tiny/0.6/: acetamide.prod.out
fixtures/amber/acetamide_tiny/0.7/: acetamide.prod.out
fixtures/amber/acetamide_tiny/0.8/: acetamide.prod.out
fixtures/gromacs/: README.md  lambda_0.xvg  lambda_1.xvg  lambda_15.xvg  lambda_2.xvg  lambda_3.xvg
fixtures/gromacs/simple/: dhdl.xvg
fixtures/uwham/: README.md  README.txt  delta_f.csv  logQ.csv  size.csv  ze.csv
python/alchemrs/: __init__.py  openmm.py
python/examples/: amber_fixture_analysis.py  atm_analysis.py  openmm_atm.py  openmm_nes.py  openmm_u_kln_mbar.py
python/tests/: conftest.py  test_bindings.py
src/: analysis.rs  error.rs  estimators.rs  lib.rs  main.rs  plot.rs  prep.rs
src/cli/: input.rs  mod.rs  output.rs  overlap.rs
src/cli/commands/: advise.rs  bar.rs  exp.rs  mbar.rs  mod.rs  nes.rs  nes_mbar.rs  ti.rs
src/data/: atm.rs  mod.rs  results.rs  state.rs  state_match.rs  timeseries.rs
src/estimators/: atm.rs  bar.rs  common.rs  exp.rs  mbar.rs  mod.rs  nes.rs  nes_mbar.rs  ti.rs  uwham.rs
src/parse/: amber.rs  gromacs.rs  mod.rs
tests/: amber_errors.rs  amber_integration.rs  atm.rs  bar_alchemlyb.rs  block_analysis.rs  cli_regression.rs  convergence.rs  decorrelation_alchemlyb.rs  decorrelation_u_nk_alchemlyb.rs  detect_equilibration_alchemlyb.rs  exp_pymbar.rs  gromacs_integration.rs  mbar_alchemlyb.rs  overlap.rs  overlap_alchemlyb.rs  ti_alchemlyb.rs  ti_scipy.rs  uwham_invariants.rs  uwham_matches_mbar.rs
(+37 files in other folders)
