[package]
name = "alchemrs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
nalgebra = "0.33"
rayon = "1.10"
regex = "1"
thiserror = "1"

[dev-dependencies]
tempfile = "3"

[workspace]
resolver = "2"
members = ["crates/alchemrs-cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
