[package]
name = "alchemrs"
version = "1.1.1"
edition = "2021"
rust-version = "1.85"
description = "Rust toolkit for alchemical free energy analysis of AMBER outputs"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/helmutcarter/alchemrs"
homepage = "https://github.com/helmutcarter/alchemrs"
documentation = "https://docs.rs/alchemrs"
keywords = ["alchemy", "free-energy", "mbar", "bar", "amber"]
categories = ["science", "command-line-utilities"]

[features]
default = []
plotting = ["dep:plotters"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
nalgebra = "0.33"
plotters = { version = "0.3.7", optional = true }
rayon = "1.10"
regex = "1"
thiserror = "1"

[dev-dependencies]
serde_json = "1"
tempfile = "3"
