[package]
name = "alchemrs"
version = "0.3.3"
edition = "2021"
rust-version = "1.85"
description = "CLI-first alchemical free energy analysis tool with a Rust API"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/helmutcarter/alchemrs"
homepage = "https://github.com/helmutcarter/alchemrs"
documentation = "https://docs.rs/alchemrs"
keywords = ["alchemy", "free-energy", "cli", "mbar", "gromacs"]
categories = ["science", "command-line-utilities"]

[features]
default = []
plotting = ["dep:plotters"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
csv = "1"
nalgebra = "0.33"
plotters = { version = "0.3.7", optional = true }
rand = { version = "0.8", features = ["small_rng"] }
rayon = "1.10"
regex = "1"
rustfft = "6"
serde_json = "1"
thiserror = "1"

[dev-dependencies]
tempfile = "3"

[[example]]
name = "generate_doc_plots"
required-features = ["plotting"]

[workspace]
members = ["alchemrs-py"]
