[package]
name = "alchemrs-analysis"
version = "0.1.0"
edition = "2021"
rust-version = "1.94"

[dependencies]
alchemrs-core = { path = "../alchemrs-core" }
alchemrs-estimators = { path = "../alchemrs-estimators" }
nalgebra = "0.33"

[dev-dependencies]
alchemrs-parse = { path = "../alchemrs-parse" }
