[package]
name = "alchemrs-analysis"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
alchemrs-core = { path = "../alchemrs-core" }
alchemrs-estimators = { path = "../alchemrs-estimators" }
nalgebra = "0.33"

[dev-dependencies]
alchemrs-parse = { path = "../alchemrs-parse" }
