[package]
name = "alchemrs-cli"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"

[dependencies]
alchemrs-core = { path = "../alchemrs-core" }
alchemrs-estimators = { path = "../alchemrs-estimators" }
alchemrs-parse = { path = "../alchemrs-parse" }
alchemrs-prep = { path = "../alchemrs-prep" }
clap = { version = "4.5", features = ["derive"] }
