[package]
name = "alchemrs-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
alchemrs-analysis = { path = "../alchemrs-analysis" }
alchemrs-core = { path = "../alchemrs-core" }
alchemrs-estimators = { path = "../alchemrs-estimators" }
alchemrs-parse = { path = "../alchemrs-parse" }
alchemrs-prep = { path = "../alchemrs-prep" }
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
serde_json = "1"
